<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dip" >

        <LinearLayout
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_ssid" />

            <EditText
                android:id="@+id/ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wifi_ssid_hint"
                android:inputType="textNoSuggestions"
                android:maxLength="32"
                android:singleLine="true" />

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:text="@string/wifi_security" />

            <Spinner
                android:id="@+id/security"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/wifi_ap_security"
                android:prompt="@string/wifi_security" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dip"
                android:text="@string/wifi_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="flagForceAscii"
                android:maxLength="63"
                android:password="true"
                android:singleLine="true" />

            <TextView
                android:id="@+id/hint"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/credentials_password_too_short"
                android:textSize="12sp" />

            <CheckBox
                android:id="@+id/show_password"
                style="?android:attr/textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wifi_show_password" />
        </LinearLayout>

        <Button
            android:id="@+id/id_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="创建AP" />

        <TextView
            android:id="@+id/id_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="您要创建wifi热点吗?" />
    </LinearLayout>

</ScrollView>